ciração do segundo encontro (estrutura inicial)

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,17 @@
 /netcore-intro/src/Parking.Sln/Parking.Dto/obj
 /netcore-intro/src/Parking.Sln/Parking.Infra/obj
 /netcore-intro/src/Parking.Sln/Parking.Web/obj
+/netcore-entityframeworkcore/src/Parking.Sln/.vs/Parking/v16
+/netcore-entityframeworkcore/src/Parking.Sln/Parking.Application/bin/Debug/netstandard2.0
+/netcore-entityframeworkcore/src/Parking.Sln/Parking.Application/obj
+/netcore-entityframeworkcore/src/Parking.Sln/Parking.Domain/bin/Debug/netstandard2.0
+/netcore-entityframeworkcore/src/Parking.Sln/Parking.Domain/obj
+/netcore-entityframeworkcore/src/Parking.Sln/Parking.Dto/bin/Debug/netstandard2.0
+/netcore-entityframeworkcore/src/Parking.Sln/Parking.Dto/obj
+/netcore-entityframeworkcore/src/Parking.Sln/Parking.Infra/bin/Debug/netstandard2.0
+/netcore-entityframeworkcore/src/Parking.Sln/Parking.Infra/obj/Debug/netstandard2.0
+/netcore-entityframeworkcore/src/Parking.Sln/Parking.Infra/obj
+/netcore-entityframeworkcore/src/Parking.Sln/Parking.Web/bin/Debug/netcoreapp2.2
+/netcore-entityframeworkcore/src/Parking.Sln/Parking.Web/obj/Debug/netcoreapp2.2
+/netcore-entityframeworkcore/src/Parking.Sln/Parking.Web/obj
+/netcore-intro/src/Parking.Sln/.vs/Parking/DesignTimeBuild
