finalização encontro entityframeworkcore

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@
 /netcore-entityframeworkcore/src/Parking.Sln/Parking.Web/obj/Debug/netcoreapp2.2
 /netcore-entityframeworkcore/src/Parking.Sln/Parking.Web/obj
 /netcore-intro/src/Parking.Sln/.vs/Parking/DesignTimeBuild
+/netcore-entityframeworkcore/src/Parking.Sln/.vs/Parking/DesignTimeBuild/.dtbcache
+/netcore-entityframeworkcore/src/Parking.Sln/Parking.Domain/Migrations
