criação da estrutura do terceiro encontro

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,22 @@
 /netcore-intro/src/Parking.Sln/.vs/Parking/DesignTimeBuild
 /netcore-entityframeworkcore/src/Parking.Sln/.vs/Parking/DesignTimeBuild/.dtbcache
 /netcore-entityframeworkcore/src/Parking.Sln/Parking.Domain/Migrations
+/netcore-api/src/Parking.Sln/.config
+/netcore-api/src/Parking.Sln/.vs/Parking/DesignTimeBuild
+/netcore-api/src/Parking.Sln/.vs/Parking/v16
+/netcore-api/src/Parking.Sln/Parking.Application/bin/Debug/netstandard2.0
+/netcore-api/src/Parking.Sln/Parking.Application/obj
+/netcore-api/src/Parking.Sln/Parking.Domain/bin/Debug/netstandard2.0
+/netcore-api/src/Parking.Sln/Parking.Domain/Migrations
+/netcore-api/src/Parking.Sln/Parking.Domain/obj
+/netcore-api/src/Parking.Sln/Parking.Dto/bin/Debug/netstandard2.0
+/netcore-api/src/Parking.Sln/Parking.Dto/obj
+/netcore-api/src/Parking.Sln/Parking.Infra/bin/Debug/netstandard2.0
+/netcore-api/src/Parking.Sln/Parking.Infra/obj
+/netcore-api/src/Parking.Sln/Parking.Web/bin/Debug/netcoreapp2.2
+/netcore-api/src/Parking.Sln/Parking.Web/obj
+/netcore-intro/src/Parking.Sln/Parking.Application/bin/Debug/netstandard2.0
+/netcore-intro/src/Parking.Sln/Parking.Domain/bin/Debug/netstandard2.0
+/netcore-intro/src/Parking.Sln/Parking.Dto/bin/Debug/netstandard2.0
+/netcore-intro/src/Parking.Sln/Parking.Infra/bin/Debug/netstandard2.0
+/netcore-intro/src/Parking.Sln/Parking.Web/bin/Debug/netcoreapp2.2
