--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,22 @@
 /netcore-intro/src/Parking.Sln/Parking.Dto/bin/Debug/netstandard2.0
 /netcore-intro/src/Parking.Sln/Parking.Infra/bin/Debug/netstandard2.0
 /netcore-intro/src/Parking.Sln/Parking.Web/bin/Debug/netcoreapp2.2
+/netcore-repositorty-pattern/src/Parking.Sln/.config
+/netcore-repositorty-pattern/src/Parking.Sln/.vs/Parking/config
+/netcore-repositorty-pattern/src/Parking.Sln/.vs/Parking/DesignTimeBuild
+/netcore-repositorty-pattern/src/Parking.Sln/.vs/Parking/v16
+/netcore-repositorty-pattern/src/Parking.Sln/Parking.Application/bin/Debug/netstandard2.0
+/netcore-repositorty-pattern/src/Parking.Sln/Parking.Application/obj/Debug/netstandard2.0
+/netcore-repositorty-pattern/src/Parking.Sln/Parking.Application/obj
+/netcore-repositorty-pattern/src/Parking.Sln/Parking.Domain/bin/Debug/netstandard2.0
+/netcore-repositorty-pattern/src/Parking.Sln/Parking.Domain/obj/Debug/netstandard2.0
+/netcore-repositorty-pattern/src/Parking.Sln/Parking.Domain/obj
+/netcore-repositorty-pattern/src/Parking.Sln/Parking.Dto/bin/Debug/netstandard2.0
+/netcore-repositorty-pattern/src/Parking.Sln/Parking.Dto/obj/Debug/netstandard2.0
+/netcore-repositorty-pattern/src/Parking.Sln/Parking.Dto/obj
+/netcore-repositorty-pattern/src/Parking.Sln/Parking.Infra/bin/Debug/netstandard2.0
+/netcore-repositorty-pattern/src/Parking.Sln/Parking.Infra/obj/Debug/netstandard2.0
+/netcore-repositorty-pattern/src/Parking.Sln/Parking.Infra/obj
+/netcore-repositorty-pattern/src/Parking.Sln/Parking.Web/bin/Debug/netcoreapp2.2
+/netcore-repositorty-pattern/src/Parking.Sln/Parking.Web/obj/Debug/netcoreapp2.2
+/netcore-repositorty-pattern/src/Parking.Sln/Parking.Web/obj
