finalização da aula 4

--- a/netcore-repositorty-pattern/src/Parking.Sln/Parking.Application/Parking.Application.csproj
+++ b/netcore-repositorty-pattern/src/Parking.Sln/Parking.Application/Parking.Application.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Parking.Domain\Parking.Domain.csproj" />
+    <ProjectReference Include="..\Parking.Dto\Parking.Dto.csproj" />
+    <ProjectReference Include="..\Parking.Infra\Parking.Infra.csproj" />
   </ItemGroup>
 
 </Project>
