--- a/netcore-repositorty-pattern/src/Parking.Sln/Parking.Domain/Parking.Domain.csproj
+++ b/netcore-repositorty-pattern/src/Parking.Sln/Parking.Domain/Parking.Domain.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Parking.Dto\Parking.Dto.csproj" />
+  </ItemGroup>
+
 </Project>
