--- a/netcore-repositorty-pattern/src/Parking.Sln/Parking.Infra/Parking.Infra.csproj
+++ b/netcore-repositorty-pattern/src/Parking.Sln/Parking.Infra/Parking.Infra.csproj
@@ -1,7 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Parking.Domain\Parking.Domain.csproj" />
+    <ProjectReference Include="..\Parking.Dto\Parking.Dto.csproj" />
+  </ItemGroup>
 
 </Project>
